--- a/Maintenance dashboard.Client/Views/RegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/RegisterToolControl.xaml
@@ -10,11 +10,10 @@
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
              d:DataContext="{d:DesignInstance viewModels:RegisterToolViewModel}"
              Height="auto" Width="auto">
-
     <Grid Margin="25">
         <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" 
                                              OpeningEffect="{materialDesign:TransitionEffect FadeIn}"/>
-        <Grid x:Name="GridPrincipal">
+        <Grid>
             <Border Height="auto" Width="auto" CornerRadius="20">
                 <Border.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -25,14 +24,12 @@
                 </Border.Background>
             </Border>
 
-            <Button x:Name="btnOpenWindowAddRegisterTool"  Height="25"  Width="150" Background="White" Foreground="#FF0069C0"  BorderBrush="#FF0069C0"  
-                             Content="DODAJ WYPOSAŻENIE" Grid.Column="0" FontSize="11" VerticalAlignment="Top"
-                         HorizontalAlignment="Left" Margin="20" Click="btnOpenWindowAddRegisterTool_Click" />
+            
 
 
             <materialDesign:PackIcon Kind="Tools" VerticalAlignment="Top" Width="80" Height="80" 
                                      HorizontalAlignment="Center" Margin="5" Foreground="White"/>
-            
+
             <Rectangle Fill="White" Margin="15,85,15, 15" RadiusX="15" RadiusY="15" 
                        RenderTransformOrigin="0.5,0.5">
                 <Rectangle.Effect>
@@ -53,8 +50,7 @@
                 </Grid.RowDefinitions>
 
 
-
-                <ListBox ItemsSource="{Binding RegisterTools}" SelectedItem="{Binding SelectedRegisterTool}" Grid.Column="1" Grid.Row="1">
+                <!--<ListBox ItemsSource="{Binding RegisterTools}" SelectedItem="{Binding SelectedRegisterTool}" Grid.Column="1" Grid.Row="1">
                     <ListBox.Resources>
                         <DataTemplate DataType="{x:Type data:RegisterTool}">
                             <TextBlock>
@@ -65,13 +61,17 @@
                             </TextBlock>
                         </DataTemplate>
                     </ListBox.Resources>
-                </ListBox>
-                
+                </ListBox>-->
 
-                <TextBlock Text="REJESTROWANE WYPOSAŻENIE" HorizontalAlignment="Center" VerticalAlignment="Center"  
+                <DataGrid ItemsSource="{Binding RegisterTools}" SelectedItem="{Binding SelectedRegisterTool}" 
+                          Grid.Column="1" Grid.Row="1" Margin="10" />
+
+
+
+                <TextBlock Text="EDYTUJ WYPOSAŻENIE" HorizontalAlignment="Center" VerticalAlignment="Center"  
                            FontSize="18" Grid.Column="0" Grid.Row="0" Foreground="Gray" Grid.ColumnSpan="2" Margin="10"/>
 
-                <StackPanel VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="5" Grid.Column="0" Grid.Row="1">
+                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" Grid.Column="0" Grid.Row="1">
 
                     <TextBox x:Name="txtID" Width="400" IsReadOnly="True" materialDesign:HintAssist.Hint="Id" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
@@ -85,7 +85,7 @@
                              UpdateSourceTrigger=PropertyChanged, 
                              ValidatesOnDataErrors=True}" Margin="10"/>
                     <TextBox  materialDesign:HintAssist.Hint="Kod UID" Width="400" 
-                              materialDesign:HintAssist.HelperText="" IsReadOnly="True" 
+                              materialDesign:HintAssist.HelperText=""  
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
                               Text="{Binding UidCode, 
                               UpdateSourceTrigger=PropertyChanged, 
@@ -98,20 +98,16 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
-                        <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    
+
 
                     <Button  Height="25"  Width="100"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  
-                             Content="EDYTUJ"  Margin="10" Grid.Column="0" 
+                             Content="ZAPISZ"  Margin="10" Grid.Column="0" 
                              Command="{Binding SaveRegisterToolCommand}"/>
                     <Button   Height="25"  Width="100"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  
                               Content="USUŃ"  Margin="10" Grid.Column="1"
                               Command="{Binding DeleteRegisterToolCommand}"/>
-                    <Button   Height="25"  Width="100"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  
-                              Content="ODŚWIEŻ"  Margin="10" Grid.Column="2"
-                              Command="{Binding GetRegisterToolListCommand}"/>
-                
+
                 </Grid>
             </Grid>
         </Grid>
