--- a/Maintenance dashboard.Client/Views/BuiltFunctionControl.xaml
+++ b/Maintenance dashboard.Client/Views/BuiltFunctionControl.xaml
@@ -15,7 +15,7 @@
         </Rectangle>
     
     <StackPanel Margin="40">
-            <materialDesign:PackIcon Kind="RobotIndustrial" Foreground="#FF0288D1" Width="300" Height="300" Margin="10"/>
+            <materialDesign:PackIcon Kind="Code" Foreground="#FF0288D1" Width="300" Height="300" Margin="10"/>
             <TextBlock Text="FUNKCJONALNOŚĆ W BUDOWIE" Foreground="#FF0288D1" Margin="10" HorizontalAlignment="Center" FontSize="20"/>
     </StackPanel>
     </Grid>
