--- a/Maintenance dashboard.Client/Views/RegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/RegisterToolControl.xaml
@@ -10,7 +10,7 @@
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
              d:DataContext="{d:DesignInstance viewModels:RegisterToolViewModel}"
              Height="auto" Width="auto">
-    <Grid Margin="25">
+    <Grid >
         <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" 
                                              OpeningEffect="{materialDesign:TransitionEffect FadeIn}"/>
         <Grid>
@@ -31,40 +31,27 @@
                                      HorizontalAlignment="Center" Margin="5" Foreground="White"/>
 
             <Rectangle Fill="White" Margin="15,85,15, 15" RadiusX="15" RadiusY="15" 
-                       RenderTransformOrigin="0.5,0.5">
+                       RenderTransformOrigin="0.5,0.5" Width="700" Height="400">
                 <Rectangle.Effect>
                     <DropShadowEffect BlurRadius="10" RenderingBias="Quality" Direction="0" Color="#FFBBBBBB" 
                                       ShadowDepth="1"/>
                 </Rectangle.Effect>
             </Rectangle>
 
-            <Grid  Margin="15,80,15, 15" >
+            <Grid  Margin="15,80,15, 15" Width="700" Height="400">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="60"/>
-                    <RowDefinition/>
+                    <RowDefinition />
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
 
-                <!--<ListBox ItemsSource="{Binding RegisterTools}" SelectedItem="{Binding SelectedRegisterTool}" Grid.Column="1" Grid.Row="1">
-                    <ListBox.Resources>
-                        <DataTemplate DataType="{x:Type data:RegisterTool}">
-                            <TextBlock>
-                        <Run FontWeight="Bold">Tool Name:</Run>
-                        <Run Text="{Binding ToolName}"/>
-                        <Run FontWeight="Bold">UidCode:</Run>
-                        <Run Text="{Binding UidCode}"/>
-                            </TextBlock>
-                        </DataTemplate>
-                    </ListBox.Resources>
-                </ListBox>-->
-
                 <DataGrid ItemsSource="{Binding RegisterTools}" SelectedItem="{Binding SelectedRegisterTool}" 
-                          Grid.Column="1" Grid.Row="1" Margin="10" />
+                          Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="10" Background="White"/>
 
 
 
@@ -73,7 +60,7 @@
 
                 <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" Grid.Column="0" Grid.Row="1">
 
-                    <TextBox x:Name="txtID" Width="400" IsReadOnly="True" materialDesign:HintAssist.Hint="Id" 
+                    <TextBox x:Name="txtID" Width="400"  IsEnabled="False"  materialDesign:HintAssist.Hint="Id" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                              Text="{Binding SelectedRegisterTool.Id, 
                              UpdateSourceTrigger=PropertyChanged, 
@@ -87,7 +74,7 @@
                     <TextBox  materialDesign:HintAssist.Hint="Kod UID" Width="400" 
                               materialDesign:HintAssist.HelperText=""  
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
-                              Text="{Binding UidCode, 
+                              Text="{Binding SelectedRegisterTool.UidCode, 
                               UpdateSourceTrigger=PropertyChanged, 
                               ValidatesOnDataErrors=True}" />
 
