--- a/Maintenance dashboard.Client/Views/AddRegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/AddRegisterToolControl.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              xmlns:data="clr-namespace:MaintenanceDashboard.Data.Domain;assembly=MaintenanceDashboard.Data"
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:RegisterToolViewModel}" >
+             d:DataContext="{d:DesignInstance viewModels:MaintenanceDashboardViewModel}" >
     <Grid >
 
 
