--- a/Maintenance dashboard.Client/Views/RegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/RegisterToolControl.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              xmlns:data="clr-namespace:MaintenanceDashboard.Data.Domain;assembly=MaintenanceDashboard.Data"
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:RegisterToolViewModel}"
+             d:DataContext="{d:DesignInstance viewModels:MaintenanceDashboardViewModel}"
              Height="auto" Width="auto">
     <Grid >
         <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" 
