--- a/Maintenance dashboard.Client/Views/AddEmployeeControl.xaml
+++ b/Maintenance dashboard.Client/Views/AddEmployeeControl.xaml
@@ -1,10 +1,12 @@
-﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.AddPadleControl"
+﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.AddEmployeeControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:MaintenanceDashboard.Client.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
+            
     </Grid>
 </UserControl>
