--- a/Maintenance dashboard.Client/Views/EditRegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/EditRegisterToolControl.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             x:Class="MaintenanceDashboard.Client.Views.RegisterToolControl"
+             x:Class="MaintenanceDashboard.Client.Views.EditRegisterToolControl"
              mc:Ignorable="d" 
              xmlns:data="clr-namespace:MaintenanceDashboard.Data.Domain;assembly=MaintenanceDashboard.Data"
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
