--- a/Maintenance dashboard.Client/Views/ManagerEmployeeControl.xaml
+++ b/Maintenance dashboard.Client/Views/ManagerEmployeeControl.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.ManagerRegisterToolControl"
+﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.ManagerEmployeeControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" >
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -11,8 +12,8 @@
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal" Margin="4" Grid.Row="0">
-            <RadioButton x:Name="btnOpenAddRegisterTool" Style="{StaticResource MaterialDesignTabRadioButton}"  Margin="4"  Content="DODAJ WYPOSAŻENIE" Checked="btnOpenAddRegisterTool_Checked" />
-            <RadioButton x:Name="btnOpenEditRegisterTool" Style="{StaticResource MaterialDesignTabRadioButton}" Margin="4" Content="EDYTUJ WYPOSAŻENIE" Checked="btnOpenEditRegisterTool_Checked" IsChecked="True" Command="{Binding GetRegisterToolListCommand}" />
+            <RadioButton x:Name="btnOpenAddEmployee" Style="{StaticResource MaterialDesignTabRadioButton}"  Margin="4"  Content="DODAJ PRACOWNIKA" Checked="btnOpenAddEmployee_Checked" />
+            <RadioButton x:Name="btnOpenEditEmployee" Style="{StaticResource MaterialDesignTabRadioButton}" Margin="4" Content="EDYTUJ PRACOWNIKA" Checked="btnOpenEditEmployee_Checked" Command="{Binding }" />
         </StackPanel>
 
         <Grid x:Name="GridPrincipal" Grid.Row="1" Width="700" Height="400"/>
