--- a/Maintenance dashboard.Client/Views/EditRegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/EditRegisterToolControl.xaml
@@ -5,11 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              x:Class="MaintenanceDashboard.Client.Views.EditRegisterToolControl"
-             mc:Ignorable="d" 
-             xmlns:data="clr-namespace:MaintenanceDashboard.Data.Domain;assembly=MaintenanceDashboard.Data"
+             mc:Ignorable="d"
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:MaintenanceDashboardViewModel}"
-             Height="auto" Width="auto">
+             d:DataContext="{d:DesignInstance viewModels:MaintenanceDashboardViewModel}">
     <Grid >
         <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" 
                                              OpeningEffect="{materialDesign:TransitionEffect FadeIn}"/>
