--- a/Maintenance dashboard.Client/Views/EditEmployeeControl.xaml
+++ b/Maintenance dashboard.Client/Views/EditEmployeeControl.xaml
@@ -8,98 +8,93 @@
               xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
              d:DataContext="{d:DesignInstance viewModels:MaintenanceDashboardViewModel}">
 
-    <Grid >
-        <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" 
-                                             OpeningEffect="{materialDesign:TransitionEffect FadeIn}"/>
-        <Grid>
-            <Border Height="auto" Width="auto" CornerRadius="20">
-                <Border.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="#FF2281D1"/>
-                        <GradientStop Color="#FF34288B" Offset="1"/>
-                        <GradientStop Color="#FF33288B" Offset="1"/>
-                    </LinearGradientBrush>
-                </Border.Background>
-            </Border>
+    <Grid Width="730">
+        <Border CornerRadius="20">
+            <Border.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF2281D1"/>
+                    <GradientStop Color="#FF34288B" Offset="1"/>
+                    <GradientStop Color="#FF33288B" Offset="1"/>
+                </LinearGradientBrush>
+            </Border.Background>
+        </Border>
 
 
-            <materialDesign:PackIcon Kind="UsersGroupOutline" VerticalAlignment="Top" Width="80" Height="80" 
+        <materialDesign:PackIcon Kind="UsersGroupOutline" VerticalAlignment="Top" Width="80" Height="80" 
                                      HorizontalAlignment="Center" Margin="5" Foreground="White"/>
 
-            <Rectangle Fill="White" Margin="15,85,15, 15" RadiusX="15" RadiusY="15" 
-                       RenderTransformOrigin="0.5,0.5" Width="700" Height="600">
-                <Rectangle.Effect>
-                    <DropShadowEffect BlurRadius="10" RenderingBias="Quality" Direction="0" Color="#FFBBBBBB" 
+        <Rectangle Fill="White" Margin="15,85,15, 15" RadiusX="15" RadiusY="15" 
+                       RenderTransformOrigin="0.5,0.5" >
+            <Rectangle.Effect>
+                <DropShadowEffect BlurRadius="10" RenderingBias="Quality" Direction="0" Color="#FFBBBBBB" 
                                       ShadowDepth="1"/>
-                </Rectangle.Effect>
-            </Rectangle>
+            </Rectangle.Effect>
+        </Rectangle>
 
-            <Grid  Margin="15,80,15, 15" Width="700" Height="500">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="60"/>
-                    <RowDefinition />
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
+        <Grid  Margin="15,80,15, 15" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="250"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
 
 
-                <DataGrid ItemsSource="{Binding Employees}" SelectedItem="{Binding SelectedEmployee}" 
+            <DataGrid ItemsSource="{Binding Employees}" SelectedItem="{Binding SelectedEmployee}" Height="300"
                           Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="10" Background="White"/>
 
 
 
-                <TextBlock Text="EDYCJA PRACOWNIKÓW" HorizontalAlignment="Center" VerticalAlignment="Center"  
+            <TextBlock Text="EDYCJA PRACOWNIKÓW" HorizontalAlignment="Center" VerticalAlignment="Center"  
                            FontSize="18" Grid.Column="0" Grid.Row="0" Foreground="Gray" Grid.ColumnSpan="2" Margin="10"/>
 
-                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" Grid.Column="0" Grid.Row="1">
+            <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" Grid.Column="0" Grid.Row="1">
 
-                    <TextBox x:Name="txtID" Width="400"  IsEnabled="False"  materialDesign:HintAssist.Hint="Id" 
+                <TextBox x:Name="txtID" Width="400"  IsEnabled="False"  materialDesign:HintAssist.Hint="Id" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                              Text="{Binding SelectedRegisterTool.Id, 
                              UpdateSourceTrigger=PropertyChanged, 
                              ValidatesOnDataErrors=True}"
                              Margin="10"/>
-                    
-                    <TextBox  Width="400" materialDesign:HintAssist.Hint="Imie" 
+
+                <TextBox  Width="400" materialDesign:HintAssist.Hint="Imie" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
                              Text="{Binding SelectedEmployee.FirstName, 
                              UpdateSourceTrigger=PropertyChanged, 
                              ValidatesOnDataErrors=True}" Margin="10"/>
 
-                    <TextBox  Width="400" materialDesign:HintAssist.Hint="Nazwisko" 
+                <TextBox  Width="400" materialDesign:HintAssist.Hint="Nazwisko" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
                              Text="{Binding SelectedEmployee.LastName, 
                              UpdateSourceTrigger=PropertyChanged, 
                              ValidatesOnDataErrors=True}" Margin="10"/>
 
-                    <TextBox  materialDesign:HintAssist.Hint="Kod UID" Width="400" 
+                <TextBox  materialDesign:HintAssist.Hint="Kod UID" Width="400" 
                               materialDesign:HintAssist.HelperText=""  
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
                               Text="{Binding SelectedEmployee.UidCode, 
                               UpdateSourceTrigger=PropertyChanged, 
                               ValidatesOnDataErrors=True}" />
 
-                </StackPanel>
+            </StackPanel>
 
 
-                <Grid Grid.Column="0" Grid.Row="2" VerticalAlignment="Top">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0" Grid.Row="2" VerticalAlignment="Top">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
 
 
-                    <Button  Height="25"  Width="100"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  
+                <Button  Height="25"  Width="100"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  
                              Content="ZAPISZ"  Margin="10" Grid.Column="0" 
                              Command="{Binding SaveEmployeeCommand}"/>
-                    <Button   Height="25"  Width="100"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  
+                <Button   Height="25"  Width="100"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  
                               Content="USUŃ"  Margin="10" Grid.Column="1"
                               Command="{Binding DeleteEmployeeCommand}"/>
-
-                </Grid>
             </Grid>
         </Grid>
     </Grid>
